--- a/locales/wcg-bot_fr-FR.json
+++ b/locales/wcg-bot_fr-FR.json
@@ -48,7 +48,7 @@
 
 	"Retry": "Réessayer",
 
-	"Change for another account name": "Changer pour un autre nom de compte",
+	"Change to another account name": "Changer pour un autre nom de compte",
 
 	"This name doesn't correspond to the WCG account ID {{accountID}}": "Ce nom ne correspond pas au compte WGC ID {{accountID}}",
 
