--- a/locales/wcg-bot_hu-hu.json
+++ b/locales/wcg-bot_hu-hu.json
@@ -50,7 +50,7 @@
 
     "Retry": "Újra",
 
-    "Change for another account name": "Másik felhasználónévre váltás",
+    "Change to another account name": "Másik felhasználónévre váltás",
 
     "Change my account name": "Felhasználónév megváltoztatása",
 
