--- a/locales/wcg-bot_da-DK.json
+++ b/locales/wcg-bot_da-DK.json
@@ -1,5 +1,5 @@
 {
-    "Please create a World Community Grid account or modify an existing one with this username: {{username}} ": "Opret en konto på World Community Grid (eller redigér en eksisterende) med følgende navn : {{username}} ",
+    "Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ": "Opret en konto på World Community Grid (eller redigér en eksisterende) med følgende navn : {{username}} ",
     "You can change it later if you desire. Click on the link below when done.": "Du kan ændre navnet senere hvis du vil. Klik på linket herunder når du er klar.",
     "Check my account": "Tjek min konto",
     "Your WCG account is successfully linked.": "Din WCG-konto blev linket korrekt.",
