--- a/locales/wcg-bot_fr-FR.json
+++ b/locales/wcg-bot_fr-FR.json
@@ -1,6 +1,6 @@
 {
 
-	"Please create a World Community Grid account or modify an existing one with this username: {{username}} ": "Veuillez créer un compte World Community Grid ou modifier un compte existant avec le nom: {{username}} ",
+	"Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ": "Veuillez créer un compte World Community Grid ou modifier un compte existant avec le nom: {{username}} ",
 
 	"You can change it later if you desire. Click on the link below when done.": "Vous pourrez changer le nom plus tard si vous le désirez. Lorsque votre compte est nommé, cliquez le lien ci-dessous.",
 
