--- a/locales/wcg-bot_id-ID.json
+++ b/locales/wcg-bot_id-ID.json
@@ -1,5 +1,5 @@
 {
-	"Please create a World Community Grid account or modify an existing one with this username: {{username}}" : "Harap buat akun Komunitas Dunia Grid atau ubah yang sudah ada dengan nama pengguna ini: {{username}}",
+	"Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}}" : "Harap buat akun Komunitas Dunia Grid atau ubah yang sudah ada dengan nama pengguna ini: {{username}}",
 	"You can change it later if you desire. Click on the link below when done." : "Anda dapat mengubah nanti jika anda inginkan. klik pada tautan di bawah ini ketika dilakukan.",
 	"Check my account" : "Periksa Akun saya",
 	"Your WCG account is successfully linked." : "Akun wcg anda berhasil terkait.",
