--- a/locales/wcg-bot_it-IT.json
+++ b/locales/wcg-bot_it-IT.json
@@ -1,5 +1,5 @@
 {
-    "Please create a World Community Grid account or modify an existing one with this username: {{username}}": "Crea un account World Community Grid oppure modificane uno esistente con questo username: {{username}}",
+    "Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}}": "Crea un account World Community Grid oppure modificane uno esistente con questo username: {{username}}",
     "You can change it later if you desire. Click on the link below when done.": "E' possibile modificarlo in seguito se lo si desidera. Fare click sul collegamento qui sotto una volta fatto.",
     "Check my account": "Controlla il mio account",
     "Your WCG account is successfully linked.": "Il tuo account WCG è stato collegato con successo.",
