--- a/locales/wcg-bot_nl-NL.json
+++ b/locales/wcg-bot_nl-NL.json
@@ -1,5 +1,5 @@
 {
-    "Please create a World Community Grid account or modify an existing one with this username: {{username}} ": "Maak alsjeblieft een World Community Grid account aan of geef een bestaand account de volgende gebruikersnaam: {{username}} ",
+    "Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ": "Maak alsjeblieft een World Community Grid account aan of geef een bestaand account de volgende gebruikersnaam: {{username}} ",
     "You can change it later if you desire. Click on the link below when done.": "Je kan het later terugveranderen als je dit zou willen. Klik als je klaar bent op de onderstaande link.",
     "Check my account": "Controleer mijn account",
     "Your WCG account is successfully linked.": "Je WCG account is succesvol gelinkt.",
