--- a/locales/wcg-bot_zh-CN.json
+++ b/locales/wcg-bot_zh-CN.json
@@ -1,5 +1,5 @@
 {
-"Please create a World Community Grid account or modify an existing one with this username: {{username}} ": "请创建一个全球社区网格账号或用此用户名来修改现有的账号: {{username}} ",
+"Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ": "请创建一个全球社区网格账号或用此用户名来修改现有的账号: {{username}} ",
  "You can change it later if you desire. Click on the link below when done.": "如果你想要的话，可以在后续对它进行修改。完成后请点击以下链接.", 
 "Check my account": "核对我的账号", 
 "Your WCG account is successfully linked.": "WCG 账号已成功连接.", 
