--- a/locales/wcg_bot_es-ES.json
+++ b/locales/wcg_bot_es-ES.json
@@ -1,5 +1,5 @@
 {
-    "Please create a World Community Grid account or modify an existing one with this username: {{username}} ": "Por favor cree una cuenta World Community Grid con este nombre de usuario (o edite una existente): {{username}} ",
+    "Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ": "Por favor cree una cuenta World Community Grid con este nombre de usuario (o edite una existente): {{username}} ",
     "You can change it later if you desire. Click on the link below when done.": "Podrá cambiarla más tarde si lo desea. Cuando esté listo haga clic en el enlace inferior.",
     "Check my account": "Comprobar mi cuenta",
     "Your WCG account is successfully linked.": "Su cuenta WCG se ha enlazado correctamente.",
