--- a/locales/en.json
+++ b/locales/en.json
@@ -4,7 +4,7 @@
 	"Change linked WCG account": "Change linked WCG account",
 	"Change payout address": "Change payout address",
 	"Change account name": "Change account name",
-	"Please create a World Community Grid account or modify an existing one with this username: {{username}} ": "Please create a World Community Grid account or modify an existing one with this username: {{username}} ",
+	"Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ": "Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ",
 	"You can change it later if you desire. Click on the link below when done.": "You can change it later if you desire. Click on the link below when done.",
 	"Check my account": "Check my account",
 	"Your WCG account is successfully linked.": "Your WCG account is successfully linked.",
