--- a/locales/wcg-bot_de-DE.json
+++ b/locales/wcg-bot_de-DE.json
@@ -1,5 +1,5 @@
 {
-    "Please create a World Community Grid account or modify an existing one with this username: {{username}} ": "Bitte erstellen Sie ein 'World Community Grid' Konto oder verändern Sie ein existierendes mit folgenden Namen: {{username}} ",
+    "Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ": "Bitte erstellen Sie ein 'World Community Grid' Konto oder verändern Sie ein existierendes mit folgenden Namen: {{username}} ",
     "You can change it later if you desire. Click on the link below when done.": "Sie können ihn später ändern, wenn Sie wünschen. Wenn Sie fertig sind, klicken Sie auf den Link unten.",
     "Check my account": "Mein Konto prüfen",
     "Your WCG account is successfully linked.": "Ihr WCG Konto wurde erfolgreich verbunden.",
