--- a/locales/wcg-bot_id-ID.json
+++ b/locales/wcg-bot_id-ID.json
@@ -1,5 +1,5 @@
 {
-	"Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}}" : "Harap buat akun Komunitas Dunia Grid atau ubah yang sudah ada dengan nama pengguna ini: {{username}}",
+	"Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} " : "Harap buat akun Komunitas Dunia Grid atau ubah yang sudah ada dengan nama pengguna ini: {{username}}",
 	"You can change it later if you desire. Click on the link below when done." : "Anda dapat mengubah nanti jika anda inginkan. klik pada tautan di bawah ini ketika dilakukan.",
 	"Check my account" : "Periksa Akun saya",
 	"Your WCG account is successfully linked." : "Akun wcg anda berhasil terkait.",
@@ -22,5 +22,10 @@
 	"A payout of {{amountByte}}GB and {{amountAsset}} {{labelAsset}} was made to reward  your contribution." : "Pembayaran dari {{amountByte}} GB dan {{amountAsset}} {{labelAsset}} dibuat untuk menghargai kontribusi anda.",
 	"This is not a valid address." : "Ini bukan alamat yang valid",
 	"The account name: {{accountName}} doesn't correspond to ID {{WCG_id}}. You won't receive payouts until you correct this issue or link your new WCG account." : "Nama akun: {{accountName}} tidak sesuai dengan ID {{WCG_id}}. Anda tidak akan menerima pembayaran sampai anda memperbaiki masalah ini atau menautkan akun WCG anda yang baru.",
-	"For more information, please visit our wiki: https://wiki.byteball.org/WCG_distribution" : "Untuk informasi lebih lanjut, silakan kunjungi wiki kami: https://wiki.byteball.org/WCG_distribution"
+	"For more information, please visit our wiki: https://wiki.byteball.org/WCG_distribution" : "Untuk informasi lebih lanjut, silakan kunjungi wiki kami: https://wiki.byteball.org/WCG_distribution",
+	"Retry" : "Mencoba kembali",
+	"Change to another account name" : "Ubah ke nama akun lain",
+	"This name doesn't correspond to the WCG account ID {{accountID}}" : "Nama ini tidak sesuai dengan ID akun WCG {{accountID}}",
+	"Change my account name": "Ubah nama akun saya",
+	"A payout of {{amountByte}}GB and {{amountAsset}} {{labelAsset}} was made to reward your previous contribution to World Community Grid." : "Pembayaran dari {{amountByte}} GB dan {{amountAsset}} {{labelAsset}} dibuat untuk memberi penghargaan atas kontribusi anda sebelumnya ke World Community Grid."
 }
