--- a/locales/wcg-bot_id-ID.json
+++ b/locales/wcg-bot_id-ID.json
@@ -5,7 +5,7 @@
 	"Your WCG account is successfully linked.": "Akun wcg anda berhasil terkait.",
 	"Please insert the address you want to use as payout address (click on '...' Insert my address)": "Silakan masukkan alamat yang ingin anda gunakan sebagai alamat pembayaran (klik '...' Masukkan alamat saya)",
 	"Congratulations!": "Selamat!",
-	"Setup complete! Periodically, rewards proportional to your contribution to World Community Grid project under the account {{accountName}} (ID: {{accountID}}) will be sent to your payout account.": "Pengaturan selesai! Secara berkala, hadiah sebanding dengan kontribusi anda ke proyek Jaringan Komunitas Dunia di bawah akun {{accountName} (ID: {{accountID}}) akan dikirim ke akun pembayaran anda",
+	"Setup complete! Periodically, rewards proportional to your contribution to World Community Grid project under the account {{accountName}} (ID: {{accountID}}) will be sent to your payout account.": "Pengaturan selesai! Secara berkala, hadiah sebanding dengan kontribusi anda ke proyek Jaringan Komunitas Dunia di bawah akun {{accountName}} (ID: {{accountID}}) akan dikirim ke akun pembayaran anda",
 	"Change linked WCG account": "Ubah akun WCG yang ditautkan",
 	"Change payout address": "Ubah alamat pembayaran",
 	"Change account name": "Ubah nama akun",
