short source langauge keys

--- a/locales/wcg-bot_hi-IN.json
+++ b/locales/wcg-bot_hi-IN.json
@@ -1,28 +1,28 @@
 {
-	"Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ": "कृप्या एक विश्व समुदाय ग्रिड खाता खोलें या पहले से बने खाता को परिवर्तित करें इस प्रयोक्ता नाम के साथ: {{username}}",
-	"You can change it later if you desire. Click on the link below when done.": "आपकी ईक्षा हो तो बाद में बदल भी सकते हैं| निचे दिए गए कड़ी पर क्लिक करें जब पूरा हो जाये|",
-	"Check my account": "मेरा खता को जांचें",
-	"Your WCG account is successfully linked.": "आपका विश्व समुदाय ग्रिड खता सफलता पूर्वक जुड़ गया है|",
-	"Please insert the address you want to use as payout address (click on '...' Insert my address)": "जिस खाता पता में आप भुगतान पाना चाहते हैं उसे डालें (क्लिक करें '...' मेरा पता डालें) ",
-	"Congratulations!": "मुबारक हो!",
-	"Setup complete! Periodically, rewards proportional to your contribution to World Community Grid project under the account {{accountName}} (ID: {{accountID}}) will be sent to your payout account.": "विन्यास पूर्ण हुवा! आवधिक, आपके अनुपातिक इनामें विश्व समुदाय ग्रिड परियोजना  में योगदान के लिए {{accountName}} (आयीडी: {{accountID}}) के तहत भेजा जायेगा आपके भुगतान खाते में|,",
-	"Change linked WCG account": "विश्व समुदाय से जुड़ा खाता बदलें, ",
-	"Change payout address": "भुगतान पता बदलें,",
-	"Change account name": "खाता नाम बदलें,",
-	"Please enter the new name for your WCG account id {{accountID}}": "कृप्या अपना विश्व समुदाय ग्रिड खाता आयीडी {{accountID}} का नया नाम डालें,",
-	"Cancel": "रद्द",
-	"New name validated.": "नया नाम मान्य हुवा,",
-	"Ok": "ठीक",
-	"Account check failed. Please make sure you set {{accountName}} as account name and retry.": "खाता की जाँच असफल हुवा, कृप्या सुनिश्चित करें आपने {{accountName}} डाला खाता नाम के लिए और फिर से प्रयाश करें|,",
-	"Unable to get your WCG score for the ongoing distribution. Please make sure your account name is: {{accountName}}": "आपका विश्व समुदाय ग्रिड अंक पाने में असफल हुवा जारी वितरण अवधी में| कृप्या सुनिश्चित करें आपका खाता नाम है: {{accountName}}",
-	"A payout of {{amountByte}}GB and {{amountAsset}} {{labelAsset}} was made to reward  your contribution.": "{{amountByte}}जीबी और {{amountAsset}} {{labelAsset}} का एक भुगतान तैयार हुवा था आपके योगदान का इनाम|, ",
-	"An unexpected error occurred. Admin is notified. Please try again in a few hours.": "एक अनपेक्षित त्रुटि हुवा| प्रशासन अवगत हैं| दुबारा प्रयाश करें कुछ घंटे में|,",
-	"This name doesn't correspond to the WCG account ID {{accountID}}": "यह नाम मेल नहीं करता विश्व समुदाय ग्रिड खाता आईडी {{accountID}} से,",
-	"Change my account name": "मेरा खाता नाम बदलें,",
-	"This is not a valid address.": "यह एक मान्य पता नहीं है,",
-	"The account name: {{accountName}} doesn't correspond to ID {{WCG_id}}. You won't receive payouts until you correct this issue or link your new WCG account.": "खाता नाम: {{accountName}} मेल नहीं करता आयीडी {{WCG_id}}| आप भुगतान नहीं पाएंगे जबतक आप इस विवाद को ठीक नहीं करते या अपना नया विश्व समुदाय ग्रिड खाता जोड़ें|, ",
-	"For more information, please visit our wiki: https://wiki.byteball.org/WCG_distribution": "अधीक जानकारी के लिए, कृप्या निरिक्षण करें हमारा विकी: https://wiki.byteball.org/WCG_distribution,",
-	"Retry": "पुनः प्रयाश करें,",
-	"Change to another account name": "अन्य खाता नाम के लिए बदलाव",
-	"A payout of {{amountByte}}GB and {{amountAsset}} {{labelAsset}} was made to reward your previous contribution to World Community Grid.": "{{amountByte}}जीबी और {{amountAsset}} {{labelAsset}} का एक भुगतान तैयार हुवा था आपके पिछले योगदान का इनाम विश्व समुदाय ग्रिड के सन्दर्भ में|, "
+	"newAccount": "कृप्या एक विश्व समुदाय ग्रिड खाता खोलें या पहले से बने खाता को परिवर्तित करें इस प्रयोक्ता नाम के साथ: {{username}}",
+	"usernameCanBeChanged": "आपकी ईक्षा हो तो बाद में बदल भी सकते हैं| निचे दिए गए कड़ी पर क्लिक करें जब पूरा हो जाये|",
+	"checkAccountButton": "मेरा खता को जांचें",
+	"accountLinked": "आपका विश्व समुदाय ग्रिड खता सफलता पूर्वक जुड़ गया है|",
+	"insertAddress": "जिस खाता पता में आप भुगतान पाना चाहते हैं उसे डालें (क्लिक करें '...' मेरा पता डालें) ",
+	"addressLinked": "मुबारक हो!",
+	"setupComplete": "विन्यास पूर्ण हुवा! आवधिक, आपके अनुपातिक इनामें विश्व समुदाय ग्रिड परियोजना  में योगदान के लिए {{accountName}} (आयीडी: {{accountID}}) के तहत भेजा जायेगा आपके भुगतान खाते में|,",
+	"changeLinkedButton": "विश्व समुदाय से जुड़ा खाता बदलें, ",
+	"changePayoutButton": "भुगतान पता बदलें,",
+	"changeUsernameButton": "खाता नाम बदलें,",
+	"enterNewUsername": "कृप्या अपना विश्व समुदाय ग्रिड खाता आयीडी {{accountID}} का नया नाम डालें,",
+	"cancelButton": "रद्द",
+	"usernameValidated": "नया नाम मान्य हुवा,",
+	"okButton": "ठीक",
+	"accountCheckFailed": "खाता की जाँच असफल हुवा, कृप्या सुनिश्चित करें आपने {{accountName}} डाला खाता नाम के लिए और फिर से प्रयाश करें|,",
+	"scoreFetchingFailed": "आपका विश्व समुदाय ग्रिड अंक पाने में असफल हुवा जारी वितरण अवधी में| कृप्या सुनिश्चित करें आपका खाता नाम है: {{accountName}}",
+	"payoutForCurrentWork": "{{amountByte}}जीबी और {{amountAsset}} {{labelAsset}} का एक भुगतान तैयार हुवा था आपके योगदान का इनाम|, ",
+	"errorOccurred": "एक अनपेक्षित त्रुटि हुवा| प्रशासन अवगत हैं| दुबारा प्रयाश करें कुछ घंटे में|,",
+	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
+	"usernameMismatch": "यह नाम मेल नहीं करता विश्व समुदाय ग्रिड खाता आईडी {{accountID}} से,",
+	"notValidAddress": "यह एक मान्य पता नहीं है,",
+	"fixUsernameMismatch": "खाता नाम: {{accountName}} मेल नहीं करता आयीडी {{WCG_id}}| आप भुगतान नहीं पाएंगे जबतक आप इस विवाद को ठीक नहीं करते या अपना नया विश्व समुदाय ग्रिड खाता जोड़ें|, ",
+	"visitWiki": "अधीक जानकारी के लिए, कृप्या निरिक्षण करें हमारा विकी: https://wiki.byteball.org/WCG_distribution,",
+	"retryButton": "पुनः प्रयाश करें,",
+	"anotherUsernameButton": "अन्य खाता नाम के लिए बदलाव",
+	"payoutForPreviousWork": "{{amountByte}}जीबी और {{amountAsset}} {{labelAsset}} का एक भुगतान तैयार हुवा था आपके पिछले योगदान का इनाम विश्व समुदाय ग्रिड के सन्दर्भ में|, "
 }
