--- a/locales/wcg-bot_ja-JP.json
+++ b/locales/wcg-bot_ja-JP.json
@@ -1,28 +1,28 @@
 {
-	"Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} ": "World Community Gridアカウントを作成もしくは既存アカウントのユーザー名変更: {{username}} ",
-	"You can change it later if you desire. Click on the link below when done.": "必要に応じて後で変更することができます。 完了したら、下のリンクをクリックしてください.",
-	"Check my account": "アカウント確認",
-	"Your WCG account is successfully linked.": "WCGアカウントが正常に接続されました。",
-	"Please insert the address you want to use as payout address (click on '...' Insert my address)": "報酬の受取先のアドレスを入力してください ('...'をクリックして「Insert my address」を選択)",
-	"Congratulations!": "おめでとうございます。",
-	"Setup complete! Periodically, rewards proportional to your contribution to World Community Grid project under the account {{accountName}} (ID: {{accountID}}) will be sent to your payout account.": "セットアップが完了しました！World Community Gridプロジェクトへの貢献度に応じて {{accountName}} (ID: {{accountID}}) のアカウントから定期的に報酬が贈られます。",
-	"Change linked WCG account": "WCGアカウント変更",
-	"Change payout address": "報酬の受取先アドレス変更",
-	"Change account name": "アカウント名変更",
-	"Please enter the new name for your WCG account id {{accountID}}": "WCGアカウントID  {{accountID}} の新しい名前を入力してください",
-	"Cancel": "キャンセル",
-	"New name validated.": "新しい名前が確認されました。",
-	"Ok": "Ok",
-	"Account check failed. Please make sure you set {{accountName}} as account name and retry.": "アカウントIDの確認に失敗しました。 {{accountName}} をアカウント名に設定して再試行してください。",
-	"Unable to get your WCG score for the ongoing distribution. Please make sure your account name is: {{accountName}}": "現在進行中の配布のWCGスコアを取得できません。 あなたのアカウント名が{{accountName}}であることを確認してください。",
-	"A payout of {{amountByte}}GB and {{amountAsset}} {{labelAsset}} was made to reward  your contribution.": "あなたの貢献に対して{{amountByte}}GB と {{amountAsset}} {{labelAsset}} の報酬が支払われました",
-	"An unexpected error occurred. Admin is notified. Please try again in a few hours.": "予期しないエラーが発生しました。 管理者に通知されますので、数時間後にもう一度お試しください",
-	"This name doesn't correspond to the WCG account ID {{accountID}}": "この名前はWCGアカウントID {{accountID}} と一致しません",
-	"Change my account name": "アカウント名を変更する",
-	"This is not a valid address.": "正しいアドレスではありません。",
-	"The account name: {{accountName}} doesn't correspond to ID {{WCG_id}}. You won't receive payouts until you correct this issue or link your new WCG account.": "アカウント名: {{accountName}} はID {{WCG_id}} に対応してません。この問題を修正するか、新しいWCGアカウントをリンクするまで報酬は受け取れません。",
-	"For more information, please visit our wiki: https://wiki.byteball.org/WCG_distribution": "より詳しい情報は、こちらのwikiからご確認ください: https://wiki.byteball.org/WCG_distribution",
-	"Retry": "リトライ",
-	"Change to another account name": "他のアカウント名に切り替える",
-	"A payout of {{amountByte}}GB and {{amountAsset}} {{labelAsset}} was made to reward your previous contribution to World Community Grid.": "{{amountByte}}GB と {{amountAsset}} {{labelAsset}} があなたのこれまでのワールド・コミュニティ・グリッドへの貢献の報酬として支払われました。"
+	"newAccount": "World Community Gridアカウントを作成もしくは既存アカウントのユーザー名変更: {{username}} ",
+	"usernameCanBeChanged": "必要に応じて後で変更することができます。 完了したら、下のリンクをクリックしてください.",
+	"checkAccountButton": "アカウント確認",
+	"accountLinked": "WCGアカウントが正常に接続されました。",
+	"insertAddress": "報酬の受取先のアドレスを入力してください ('...'をクリックして「Insert my address」を選択)",
+	"addressLinked": "おめでとうございます。",
+	"setupComplete": "セットアップが完了しました！World Community Gridプロジェクトへの貢献度に応じて {{accountName}} (ID: {{accountID}}) のアカウントから定期的に報酬が贈られます。",
+	"changeLinkedButton": "WCGアカウント変更",
+	"changePayoutButton": "報酬の受取先アドレス変更",
+	"changeUsernameButton": "アカウント名変更",
+	"enterNewUsername": "WCGアカウントID  {{accountID}} の新しい名前を入力してください",
+	"cancelButton": "キャンセル",
+	"usernameValidated": "新しい名前が確認されました。",
+	"okButton": "okButton",
+	"accountCheckFailed": "アカウントIDの確認に失敗しました。 {{accountName}} をアカウント名に設定して再試行してください。",
+	"scoreFetchingFailed": "現在進行中の配布のWCGスコアを取得できません。 あなたのアカウント名が{{accountName}}であることを確認してください。",
+	"payoutForCurrentWork": "あなたの貢献に対して{{amountByte}}GB と {{amountAsset}} {{labelAsset}} の報酬が支払われました",
+	"errorOccurred": "予期しないエラーが発生しました。 管理者に通知されますので、数時間後にもう一度お試しください",
+	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
+	"usernameMismatch": "この名前はWCGアカウントID {{accountID}} と一致しません",
+	"notValidAddress": "正しいアドレスではありません。",
+	"fixUsernameMismatch": "アカウント名: {{accountName}} はID {{WCG_id}} に対応してません。この問題を修正するか、新しいWCGアカウントをリンクするまで報酬は受け取れません。",
+	"visitWiki": "より詳しい情報は、こちらのwikiからご確認ください: https://wiki.byteball.org/WCG_distribution",
+	"retryButton": "リトライ",
+	"anotherUsernameButton": "他のアカウント名に切り替える",
+	"payoutForPreviousWork": "{{amountByte}}GB と {{amountAsset}} {{labelAsset}} があなたのこれまでのワールド・コミュニティ・グリッドへの貢献の報酬として支払われました。"
 }
