--- a/locales/wcg-bot_de-DE.json
+++ b/locales/wcg-bot_de-DE.json
@@ -12,7 +12,7 @@
 	"enterNewUsername": "Bitte geben Sie den neuen Namen für Ihre WCG Konto ID ein {{accountID}}",
 	"cancelButton": "Abbrechen",
 	"usernameValidated": "Neuer name validiert.",
-	"okButton": "okButton",
+	"okButton": "ok",
 	"accountCheckFailed": "Kontoverifizierung fehlgeschlagen. Bitte verwenden Sie {{accountName}} als Kontonamen und versuchen Sie es bitte erneut.",
 	"scoreFetchingFailed": "WCG Punktestand konnte für die laufende Verteilung leider nicht abgerufen werden. Bitte stellen Sie sicher, dass folgendes Ihr Kontoname ist: {{accountName}}",
 	"payoutForCurrentWork": "Sie haben eine Auszahlung in Höhe von {{amountByte}}GB und {{amountAsset}} {{labelAsset}} für Ihren Beitrag erhalten.",
