--- a/locales/wcg-bot_ja-JP.json
+++ b/locales/wcg-bot_ja-JP.json
@@ -12,7 +12,7 @@
 	"enterNewUsername": "WCGアカウントID  {{accountID}} の新しい名前を入力してください",
 	"cancelButton": "キャンセル",
 	"usernameValidated": "新しい名前が確認されました。",
-	"okButton": "okButton",
+	"okButton": "ok",
 	"accountCheckFailed": "アカウントIDの確認に失敗しました。 {{accountName}} をアカウント名に設定して再試行してください。",
 	"scoreFetchingFailed": "現在進行中の配布のWCGスコアを取得できません。 あなたのアカウント名が{{accountName}}であることを確認してください。",
 	"payoutForCurrentWork": "あなたの貢献に対して{{amountByte}}GB と {{amountAsset}} {{labelAsset}} の報酬が支払われました",
