--- a/locales/en.json
+++ b/locales/en.json
@@ -10,9 +10,9 @@
 	"changePayoutButton": "Change payout address",
 	"changeUsernameButton": "Change account name",
 	"enterNewUsername": "Please enter the new name for your WCG account id {{accountID}}",
-	"cancelButton": "Cancel",
+	"cancelButton": "cancel",
 	"usernameValidated": "New name validated.",
-	"okButton": "Ok",
+	"okButton": "ok",
 	"accountCheckFailed": "Account check failed. Please make sure you set {{accountName}} as account name and retry.",
 	"scoreFetchingFailed": "Unable to get your WCG score for the ongoing distribution. Please make sure your account name is: {{accountName}}",
 	"payoutForCurrentWork": "A payout of {{amountByte}}GB and {{amountAsset}} {{labelAsset}} was made to reward your contribution.",
